--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -36,3 +36,380 @@ fairs:
     visuals:
       logo: /images/fuarlar-logo.png
       background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Arzu Günal
+    settings:
+      order: 2
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: ULUSLARARASI EV TEKSTİLİ, ve DEKORASYON FUARI
+      sector: Moda ve Tekstil
+      location_tr: ALMATI, KAZAKİSTAN
+      start_date: 2025-02-24
+      description_en: INTERNATIONAL HOME TEXTILES AND DECORATION FAIR
+      end_date: 2025-02-27
+      name_tr: 17.HOMEDECO, KAZAKİSTAN
+      location_en: ALMATY, KAZAKHSTAN
+      name_en: 17.HOMEDECO, KAZAKHSTAN
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 3
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: ULUSLARARASI GELİNLİK VE ABİYE GİYİM FUARI
+      sector: Moda ve Tekstil
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2025-02-27
+      description_en: INTERNATIONAL WEDDING DRESS AND EVENING DRESS FAIR
+      end_date: 2025-03-01
+      name_tr: 43.WEDDING FASHION MOSCOW
+      location_en: MOSCOW, RUSSIA
+      name_en: 43.WEDDING FASHION MOSCOW
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 4
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: PARIS BRIDAL FAIR
+      name_en: PARIS BRIDAL FAIR
+      start_date: 2025-03-09
+      end_date: 2025-03-10
+      location_tr: PARİS, FRANSA
+      location_en: PARIS, FRANCE
+      sector: Moda ve Tekstil
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 5
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: ELECTRO
+      name_en: ELECTRO
+      start_date: 2025-04-01
+      end_date: 2025-04-04
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 6
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: MIDDLE EAST ENERGY
+      name_en: MIDDLE EAST ENERGY
+      start_date: 2025-04-07
+      end_date: 2025-04-09
+      location_tr: DUBAI, BAE
+      location_en: DUBAI, UAE
+      sector: Enerji
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Gül Baykara
+    settings:
+      order: 7
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: ULUSLARASI DERİ VE MODA FUARI
+      sector: Moda ve Tekstil
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2025-04-28
+      description_en: INT'L WINTER FASHION TRADE SHOW
+      end_date: 2025-04-30
+      name_tr: 28.LESHOW
+      location_en: MOSCOW, RUSSIA
+      name_en: 28.LESHOW
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 8
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: RUSYA HELAL EXPO 2025
+      sector: Diğer
+      location_tr: KAZAN, TATARİSTAN
+      start_date: 2025-05-14
+      description_en: RUSSIA HALAL EXPO 2025
+      end_date: 2025-05-16
+      name_tr: KAZAN FORUM
+      location_en: KAZAN, TATARSTAN
+      name_en: KAZAN FORUM
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Ahmet Hilmi Çoruk
+    settings:
+      order: 9
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: ROSMOULD / ROSPLAST
+      name_en: ROSMOULD / ROSPLAST
+      start_date: 2025-06-17
+      end_date: 2025-06-19
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: Kalıp & Plastik, İhtisas, Havuz
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 10
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: "ULUSLARARASI ÇOCUK FUARI "
+      sector: Moda ve Tekstil
+      location_tr: KÖLN, ALMANYA
+      start_date: 2025-09-09
+      description_en: THE TRADE SHOW FOR KIDS’ FIRST YEARS
+      end_date: 2025-09-11
+      name_tr: KIND+JUGEND
+      location_en: COLOGNE, GERMANY
+      name_en: KIND+JUGEND
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 11
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: BRIDAL WEEK HARROGATE
+      name_en: BRIDAL WEEK HARROGATE
+      start_date: 2025-09-14
+      end_date: 2025-09-16
+      location_tr: HARROGATE, İNGİLTERE
+      location_en: HARROGATE, ENGLAND
+      sector: Moda ve Tekstil
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 12
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE EXPO
+      name_en: KIDS TOYS & STATIONARY PAPER & GIFT HOMEWARE EXPO
+      start_date: 2025-09-16
+      end_date: 2025-09-18
+      location_tr: RİYAD, SUUDİ ARABİSTAN
+      location_en: RIYADH, SAUDI ARABIA
+      sector: Moda ve Tekstil
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 13
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: INTERLIGHT CENTRAL ASIA
+      name_en: INTERLIGHT CENTRAL ASIA
+      start_date: 2025-09-17
+      end_date: 2025-09-19
+      location_tr: ASTANA, KAZAKİSTAN
+      location_en: ASTANA, KAZAKHSTAN
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Gül Baykara
+    settings:
+      order: 14
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: ULUSLARARASI DIŞ CEPHE, KAPI ve PENCERE FUARI
+      sector: İnşaat
+      location_tr: CEZAYİR, CEZAYİR
+      start_date: 2025-09-20
+      description_en: INTERNATIONAL FACADE, DOOR AND WINDOWS FAIR
+      end_date: 2025-09-23
+      name_tr: "7. SIFFP "
+      location_en: ALGERIA, ALGERIA
+      name_en: 7. SIFFP
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Gül Baykara
+    settings:
+      order: 15
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: FASHION SPORTS WEAR DESIGN
+      sector: Moda ve Tekstil
+      location_tr: RİYAD, SUUDİ ARABİSTAN
+      start_date: 2025-10-06
+      description_en: FASHION SPORTS WEAR DESIGN
+      end_date: 2025-10-08
+      name_tr: SAUDI LIFESTYLE WEEK
+      location_en: RIYADH, SAUDI ARABIA
+      name_en: SAUDI LIFESTYLE WEEK
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Arzu Günal
+    settings:
+      order: 16
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: HOMETEXTILE & DESIGN 2025
+      name_en: HOMETEXTILE & DESIGN 2025
+      start_date: 2025-10-21
+      end_date: 2025-10-23
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: Ev Tekstili ve Dekorasyon
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 17
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: INTERLIGHT SMART CITY & HOME
+      name_en: INTERLIGHT SMART CITY & HOME
+      start_date: 2025-10-21
+      end_date: 2025-10-24
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Ahmet Hilmi Çoruk
+    settings:
+      order: 18
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: PISCINA BARCELONA
+      name_en: PISCINA BARCELONA
+      start_date: 2025-11-17
+      end_date: 2025-11-20
+      location_tr: BARSELONA, İSPANYA
+      location_en: BARCELONA, SPAIN
+      sector: Kalıp & Plastik, İhtisas, Havuz
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 19
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: Uluslararası Mobilya, Bağlantı Elemanları ve Yan Sanayi Fuarı
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2025-11-24
+      description_en: International Furniture, Fasteners and Sub-Industry Fair
+      end_date: 2025-11-27
+      name_tr: "36.MEBEL "
+      location_en: MOSCOW, RUSSIA
+      name_en: "36.MEBEL "
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 20
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: WOODEX 2025
+      name_en: WOODEX 2025
+      start_date: 2025-12-02
+      end_date: 2025-12-05
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: İnşaat
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
