--- a/src/content/fair-years/2023.yml
+++ b/src/content/fair-years/2023.yml
@@ -15,25 +15,386 @@ page_content:
   description_en: In 2023, we brought Turkish companies together with global
     markets at prestigious fairs we organized worldwide.
 fairs:
-  - basic_info:
-      name_tr: LeShow Moskova - Uluslararası Moda ve Tekstil Endüstrisi Fuarı
-      name_en: LeShow Moscow - International Fashion and Textile Industry Fair
-      start_date: 2023-03-15
-      end_date: 2023-03-18
-      date_tr: 15-18 MART 2023
-      date_en: 15-18 MARCH 2023
-      location_tr: Moskova, Rusya
-      location_en: Moscow, Russia
-      sector: Moda ve Tekstil
-      description_tr: ULUSLARARASI MODA VE TEKSTİL ENDÜSTRİSİ FUARI
-      description_en: INTERNATIONAL FASHION AND TEXTILE INDUSTRY FAIR
-    visuals:
-      logo: /images/fuarlar-logo.png
-      background_image: /images/fuarlar-arkaplan.jpg
-    representative:
-      team_member: Seval Arslan
+  - representative:
       hide_phone: true
+      team_member: Ahmet Hilmi Çoruk
     settings:
       order: 1
       show_in_slider: false
-      show_in_forms: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: " ULUSLARARASI  TEKNE VE SU SPORLARI FUARI"
+      sector: Kalıp & Plastik, İhtisas, Havuz
+      location_tr: DUSSELDORF, ALMANYA
+      start_date: 2023-01-21
+      description_en: INTERNATIONAL BOAT AND WATER SPORTS FAIR
+      end_date: 2023-01-29
+      name_tr: BOOT DUSSELDORF
+      location_en: DUSSELDORF, GERMANY
+      name_en: BOOT DUSSELDORF
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 2
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: "COPENHAGEN FASHION FAIR "
+      sector: Moda ve Tekstil
+      location_tr: KOPENHAG, DANİMARKA
+      start_date: 2023-02-01
+      description_en: "COPENHAGEN FASHION FAIR "
+      end_date: 2023-02-03
+      name_tr: CIFF
+      location_en: COPENHAGEN, DENMARK
+      name_en: CIFF
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 3
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: " ULUSLARARASI GELİNLİK VE ABİYE GİYİM FUARI"
+      sector: Moda ve Tekstil
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2023-03-02
+      description_en: INTERNATIONAL WEDDING DRESS AND EVENING DRESS FAIR
+      end_date: 2023-03-04
+      name_tr: 40.WEDDING
+      location_en: MOSCOW, RUSSIA
+      name_en: 40.WEDDING
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 4
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: " "
+      sector: Enerji
+      location_tr: DUBAİ, BAE
+      start_date: 2023-03-07
+      description_en: " "
+      end_date: 2023-03-09
+      name_tr: MIDDLE EAST ENERGY
+      location_en: DUBAI, UAE
+      name_en: MIDDLE EAST ENERGY
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Arzu Günal
+    settings:
+      order: 5
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: ULUSLARARASI EV TEKSTİLİ, DEKORASYON ve ZÜCCACİYE FUARI
+      sector: Ev Tekstili ve Dekorasyon
+      location_tr: ALMATI, KAZAKİSTAN
+      start_date: 2023-03-13
+      description_en: INTERNATIONAL HOME TEXTILES, DECORATION AND GLASSWARE FAIR
+      end_date: 2023-03-15
+      name_tr: 15.HOMEDECO
+      location_en: ALMATY, KAZAKHSTAN
+      name_en: 15.HOMEDECO
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 6
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: FASHION WEEK &WHITE
+      sector: Moda ve Tekstil
+      location_tr: LONDRA, İNGİLTERE
+      start_date: 2023-03-19
+      description_en: FASHION WEEK &WHITE
+      end_date: 2023-03-21
+      name_tr: LONDON BRIDAL
+      location_en: LONDON, ENGLAND
+      name_en: LONDON BRIDAL
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 7
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: " "
+      sector: İnşaat
+      location_tr: KÖLN, ALMANYA
+      start_date: 2023-06-04
+      description_en: " "
+      end_date: 2023-06-07
+      name_tr: IMM COLOGNE
+      location_en: COLOGNE, GERMANY
+      name_en: IMM COLOGNE
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 8
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: ELECTRO
+      name_en: ELECTRO
+      start_date: 2023-06-06
+      end_date: 2023-06-09
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Ahmet Hilmi Çoruk
+    settings:
+      order: 9
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: ROSMOULD / ROSPLAST
+      name_en: ROSMOULD / ROSPLAST
+      start_date: 2023-06-06
+      end_date: 2023-06-08
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: Kalıp & Plastik, İhtisas, Havuz
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Gül Baykara
+    settings:
+      order: 10
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: "ULUSLARASI DERİ VE MODA FUARI "
+      sector: Moda ve Tekstil
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2023-06-06
+      description_en: INT'L WINTER FASHION TRADE SHOW
+      end_date: 2023-06-08
+      name_tr: 26.LESHOW
+      location_en: MOSCOW, RUSSIA
+      name_en: 26.LESHOW
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 11
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: WOODEX FOR AFRICA
+      name_en: WOODEX FOR AFRICA
+      start_date: 2023-06-27
+      end_date: 2023-06-29
+      location_tr: JOHANNESBURG, GUNEY AFRİKA
+      location_en: JOHANNESBURG, SOUTH AFRICA
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 12
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: PREVIEW IN SEOUL
+      name_en: PREVIEW IN SEOUL
+      start_date: 2023-08-23
+      end_date: 2023-08-25
+      location_tr: SEUL, G.KORE
+      location_en: SEOUL, S. KOREA
+      sector: Moda ve Tekstil
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Arzu Günal
+    settings:
+      order: 13
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: SLEEP EXPO MIDDLE EAST
+      name_en: SLEEP EXPO MIDDLE EAST
+      start_date: 2023-09-05
+      end_date: 2023-09-07
+      location_tr: DUBAİ, BAE
+      location_en: DUBAI, UAE
+      sector: Ev Tekstili ve Dekorasyon
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 14
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: " ULUSLARARASI ÇOCUK FUARI "
+      sector: Moda ve Tekstil
+      location_tr: KÖLN, ALMANYA
+      start_date: 2023-09-07
+      description_en: THE TRADE SHOW FOR KIDS’ FIRST YEARS
+      end_date: 2023-09-09
+      name_tr: KIND+JUGEND
+      location_en: COLOGNE, GERMANY
+      name_en: KIND+JUGEND
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Arzu Günal
+    settings:
+      order: 15
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: " "
+      sector: Ev Tekstili ve Dekorasyon
+      location_tr: HARROGATE, İNGİLTERE
+      start_date: 2023-09-17
+      description_en: " "
+      end_date: 2023-09-19
+      name_tr: THE FLOORING SHOW
+      location_en: HARROGATE, ENGLAND
+      name_en: THE FLOORING SHOW
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 16
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: "INTERLIGHT "
+      name_en: INTERLIGHT
+      start_date: 2023-09-18
+      end_date: 2023-09-21
+      location_tr: MOSKOVA, RUSYA
+      location_en: MOSCOW, RUSSIA
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 17
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: EGYPT ENERGY
+      name_en: EGYPT ENERGY
+      start_date: 2023-10-29
+      end_date: 2023-10-31
+      location_tr: KAHİRE, MISIR
+      location_en: CAIRO, EGYPT
+      sector: İnşaat
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Seval Arslan
+    settings:
+      order: 18
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      name_tr: ASFWADDIS ETHIOPIA MODA
+      name_en: ASFWADDIS ETHIOPIA MODA
+      start_date: 2023-11-03
+      end_date: 2023-11-06
+      location_tr: ADDIS ABABA, ETHIOPIA
+      location_en: ADDIS ABABA, ETHIOPIA
+      sector: Moda ve Tekstil
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
+  - representative:
+      hide_phone: true
+      team_member: Pınar Yalçın
+    settings:
+      order: 19
+      show_in_slider: false
+      show_in_forms: true
+      show_in_chronology: false
+    basic_info:
+      description_tr: Uluslararası Mobilya, Bağlantı Elemanları ve Yan Sanayi Fuarı
+      sector: Mobilya ve Mobilya Yan Sanayi & Elektrik ve Aydınlatma Fuarları
+      location_tr: MOSKOVA, RUSYA
+      start_date: 2023-11-20
+      description_en: International Furniture, Fasteners and Sub-Industry Fair.
+      end_date: 2023-11-24
+      name_tr: 34.MEBEL
+      location_en: MOSCOW, RUSSIA
+      name_en: 34.MEBEL
+    visuals:
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
